[gd_scene load_steps=2 format=3 uid="uid://bnn4ud7vmw2pi"]

[ext_resource type="Script" path="res://Looker/Settings/SettingsGeneralTab.gd" id="1_y7qcg"]

[node name="GeneralTab" type="VBoxContainer"]
script = ExtResource("1_y7qcg")

[node name="TextSpeedLabel" type="Label" parent="."]
layout_mode = 2
text = "Text speed"

[node name="TextSpeedSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0

[node name="GraphicsLabel" type="Label" parent="."]
layout_mode = 2
text = "Graphics
"
metadata/_edit_group_ = true

[node name="GraphicsSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 2.0

[node name="FullscreenCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"

[connection signal="value_changed" from="TextSpeedSlider" to="." method="_on_text_speed_slider_value_changed"]
[connection signal="value_changed" from="GraphicsSlider" to="." method="_on_graphics_slider_value_changed"]
[connection signal="toggled" from="FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
